# pypeline

./: LICENSE  README.md  pyproject.toml
pypeline/: knn.py  logistic_regression.py  preproc.py  pruned_tree.py  random_forest.py  support_vector.py  utils.py
